--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_bloc: ^3.2.0
+  shared_preferences: ^0.5.6+1
+  json_serializable: ^3.2.5
+  dio: ^3.0.8
+  build_runner: ^1.7.3
+  toast: ^0.1.5
+  equatable: ^1.0.3
+  floating_search_bar: ^0.3.0
 
 dev_dependencies:
   flutter_test:
