--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   toast: ^0.1.5
   equatable: ^1.0.3
   floating_search_bar: ^0.3.0
+  neumorphic: ^0.0.2
 
 dev_dependencies:
   flutter_test:
