--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,7 +32,9 @@ dependencies:
   equatable: ^1.0.3
   floating_search_bar: ^0.3.0
   flutter_staggered_grid_view: ^0.3.0
-  neumorphic: ^0.0.2
+  timeline_list: ^0.0.5
+  rive: ^0.0.1
+  clay_containers: ^0.2.2
 
 dev_dependencies:
   flutter_test:
