--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   floating_search_bar: ^0.3.0
   flutter_staggered_grid_view: ^0.3.0
   timeline_list: ^0.0.5
-  rive: ^0.0.1
   clay_containers: ^0.2.2
-
+  zefyr: ^0.10.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,9 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/doodles/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
