--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   timeline_list: ^0.0.5
   clay_containers: ^0.2.2
   zefyr: ^0.10.0
+  flutter_spinkit: ^4.1.1+1
   
 dev_dependencies:
   flutter_test:
